--- a/ACL4SSR.ini
+++ b/ACL4SSR.ini
@@ -46,7 +46,7 @@ ruleset=🏆 Final兜底,[]FINAL
 
 ;设置分组标志位
 custom_proxy_group=⚡️ 节点选择`select`[]🚀 手动切换1`[]🚀 手动切换2`[]♻️ 自动选择`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]DIRECT
-custom_proxy_group=🚀 手动切换1`select`.*
+custom_proxy_group=🚀 手动切换1`select`[]DIRECT`.*
 custom_proxy_group=🚀 手动切换2`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`300,,200
 custom_proxy_group=📹 油管视频`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🚀 手动切换2`[]♻️ 自动选择`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`.*
