--- a/ACL4SSR.ini
+++ b/ACL4SSR.ini
@@ -21,6 +21,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/WC-Dream/ACL4SSR/master/Clash/direct.list
 ruleset=🤖 OpenAi,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bing/Bing.list
 ruleset=🤖 OpenAi,https://raw.githubusercontent.com/Twoandz9/Clash/main/list/OpenAi.list
+ruleset=Ⓜ️ 美国视频,https://raw.githubusercontent.com/arthurxxy/qx/main/Filter/us.list
 ;ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
 ;ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
@@ -49,13 +50,13 @@ custom_proxy_group=🚀 手动切换2`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`300,,200
 custom_proxy_group=📹 油管视频`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🚀 手动切换2`[]♻️ 自动选择`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`.*
 custom_proxy_group=🎥 Netflix`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🚀 手动切换2`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`.*
+custom_proxy_group=Ⓜ️ 美国视频`select`[]DIRECT`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`.*
 custom_proxy_group=🎥 DisneyPlus`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🚀 手动切换2`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`.*
 ;custom_proxy_group=🎥 奈飞迪士尼`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🚀 手动切换2`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`.*
 ;custom_proxy_group=🎃 Spotify`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🚀 手动切换2`[]♻️ 自动选择`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]DIRECT
 custom_proxy_group=🌍 国外媒体`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🚀 手动切换2`[]♻️ 自动选择`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]DIRECT
 ;custom_proxy_group=📢 谷歌FCM`select`[]⚡️ 节点选择`🚀 手动切换1`[]🚀 手动切换2`[]DIRECT`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动
 custom_proxy_group=🤖 OpenAi`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🚀 手动切换2`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]DIRECT`.*
-;custom_proxy_group=Ⓜ️ 微软云盘`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🚀 手动切换2`[]DIRECT`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动
 ;custom_proxy_group=Ⓜ️ 微软服务`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🚀 手动切换2`[]DIRECT`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动
 custom_proxy_group=🍎 苹果服务`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🚀 手动切换2`[]DIRECT`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动
 ;custom_proxy_group=🎮 游戏平台`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🚀 手动切换2`[]DIRECT`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动
