--- a/ACL4SSR.ini
+++ b/ACL4SSR.ini
@@ -29,9 +29,7 @@ ruleset=🎥 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 ruleset=🎥 DisneyPlus,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
 ruleset=📹 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-;ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-;ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
-;ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyList.list
+
 ruleset=⚡️ 节点选择,https://raw.githubusercontent.com/arthurxxy/qx/main/Filter/ProxyGFWlist.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
@@ -44,31 +42,22 @@ ruleset=🏆 Final兜底,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=⚡️ 节点选择`select`[]🚀 手动切换1`[]🚀 手动切换2`[]♻️ 自动选择`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]DIRECT
+custom_proxy_group=⚡️ 节点选择`select`[]🚀 手动切换1`[]♻️ 自动选择`[]🇭🇰 香港自动`[]DIRECT`.*
 custom_proxy_group=🚀 手动切换1`select`[]DIRECT`.*
-custom_proxy_group=🚀 手动切换2`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`300,,200
-custom_proxy_group=📹 油管视频`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🚀 手动切换2`[]♻️ 自动选择`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`.*
-custom_proxy_group=🎥 Netflix`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🚀 手动切换2`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`.*
-custom_proxy_group=Ⓜ️ 美国视频`select`[]DIRECT`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`.*
-custom_proxy_group=🎥 DisneyPlus`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🚀 手动切换2`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`.*
-;custom_proxy_group=🎥 奈飞迪士尼`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🚀 手动切换2`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`.*
-;custom_proxy_group=🎃 Spotify`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🚀 手动切换2`[]♻️ 自动选择`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🚀 手动切换2`[]♻️ 自动选择`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]DIRECT
-;custom_proxy_group=📢 谷歌FCM`select`[]⚡️ 节点选择`🚀 手动切换1`[]🚀 手动切换2`[]DIRECT`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动
-custom_proxy_group=🤖 OpenAi`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🚀 手动切换2`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]DIRECT`.*
-;custom_proxy_group=Ⓜ️ 微软服务`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🚀 手动切换2`[]DIRECT`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动
-custom_proxy_group=🍎 苹果服务`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🚀 手动切换2`[]DIRECT`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动
-;custom_proxy_group=🎮 游戏平台`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🚀 手动切换2`[]DIRECT`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动
-;custom_proxy_group=🛑 广告拦截`select`[]DIRECT`[]REJECT
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]⚡️ 节点选择`[]♻️ 自动选择
-custom_proxy_group=🏆 Final兜底`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🚀 手动切换2`[]♻️ 自动选择`[]DIRECT`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动
+custom_proxy_group=📹 油管视频`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]♻️ 自动选择`[]🇭🇰 香港自动`.*
+custom_proxy_group=🎥 Netflix`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🇭🇰 香港自动`.*
+custom_proxy_group=Ⓜ️ 美国视频`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]DIRECT`[]🇭🇰 香港自动`.*
+custom_proxy_group=🎥 DisneyPlus`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🇭🇰 香港自动`.*
+custom_proxy_group=🌍 国外媒体`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]♻️ 自动选择`[]🇭🇰 香港自动`[]DIRECT`.*
+custom_proxy_group=🤖 OpenAi`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🇭🇰 香港自动`[]DIRECT`.*
+custom_proxy_group=🍎 苹果服务`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]DIRECT`[]🇭🇰 香港自动`.*
+
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]⚡️ 节点选择`[]♻️ 自动选择`.*
+custom_proxy_group=🏆 Final兜底`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港自动`.*
 ;自动测速
 custom_proxy_group=🇭🇰 香港自动`url-test`(香港|HK|Hong Kong|Hongkong)`https://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇯🇵 日本自动`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|Tokyo)`https://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇺🇲 美国自动`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|America|California)`https://www.gstatic.com/generate_204`300,,200
-custom_proxy_group=🇨🇳 台湾自动`url-test`(台|新北|彰化|TW|Taiwan)`https://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇸🇬 狮城自动`url-test`(新加坡|坡|狮城|SG|Singapore)`https://www.gstatic.com/generate_204`300,,150
+
 ;设置分组标志位
 
 enable_rule_generator=true
