--- a/ACL4SSR.ini
+++ b/ACL4SSR.ini
@@ -42,19 +42,18 @@ ruleset=🏆 Final兜底,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=⚡️ 节点选择`select`[]🚀 手动切换1`[]♻️ 自动选择`[]🇭🇰 香港自动`[]DIRECT`.*
-custom_proxy_group=🚀 手动切换1`select`[]DIRECT`.*
-custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`300,,200
-custom_proxy_group=📹 油管视频`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]♻️ 自动选择`[]🇭🇰 香港自动`.*
-custom_proxy_group=🎥 Netflix`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🇭🇰 香港自动`.*
-custom_proxy_group=Ⓜ️ 美国视频`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]DIRECT`[]🇭🇰 香港自动`.*
-custom_proxy_group=🎥 DisneyPlus`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🇭🇰 香港自动`.*
-custom_proxy_group=🌍 国外媒体`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]♻️ 自动选择`[]🇭🇰 香港自动`[]DIRECT`.*
-custom_proxy_group=🤖 OpenAi`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]🇭🇰 香港自动`[]DIRECT`.*
-custom_proxy_group=🍎 苹果服务`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]DIRECT`[]🇭🇰 香港自动`.*
+custom_proxy_group=⚡️ 节点选择`select`[]🇭🇰 香港自动`[]DIRECT`.*
 
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]⚡️ 节点选择`[]♻️ 自动选择`.*
-custom_proxy_group=🏆 Final兜底`select`[]⚡️ 节点选择`[]🚀 手动切换1`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港自动`.*
+custom_proxy_group=📹 油管视频`select`[]⚡️ 节点选择`[]🇭🇰 香港自动`.*
+custom_proxy_group=🎥 Netflix`select`[]⚡️ 节点选择`[]🇭🇰 香港自动`.*
+custom_proxy_group=Ⓜ️ 美国视频`select`[]⚡️ 节点选择`[]🇭🇰 香港自动`.*
+custom_proxy_group=🎥 DisneyPlus`select`[]⚡️ 节点选择`[]🇭🇰 香港自动`.*
+custom_proxy_group=🌍 国外媒体`select`[]⚡️ 节点选择`[]🇭🇰 香港自动`[]DIRECT`.*
+custom_proxy_group=🤖 OpenAi`select`[]⚡️ 节点选择`[]🇭🇰 香港自动`[]DIRECT`.*
+custom_proxy_group=🍎 苹果服务`select`[]⚡️ 节点选择`[]DIRECT`[]🇭🇰 香港自动`.*
+
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]⚡️ 节点选择`.*
+custom_proxy_group=🏆 Final兜底`select`[]⚡️ 节点选择`[]DIRECT`[]🇭🇰 香港自动`.*
 ;自动测速
 custom_proxy_group=🇭🇰 香港自动`url-test`(香港|HK|Hong Kong|Hongkong)`https://www.gstatic.com/generate_204`300,,150
 
