--- a/Surge.conf
+++ b/Surge.conf
@@ -7,7 +7,7 @@ allow-wifi-access = false
 # > All Hybrid 网络并发
 all-hybrid = false
 # > IPv6 支持（默认关闭）
-ipv6 = false
+ipv6 = true
 # > 测试超时（秒）
 test-timeout = 2
 # > Internet 测试 URL
@@ -24,7 +24,9 @@ hijack-dns = 8.8.8.8:53, 8.8.4.4:53
 # > 从 /etc/hosts 读取 DNS 记录
 read-etc-hosts = true
 # > 远程控制器
-http-api-web-dashboard = false
+http-api-web-dashboard = true
+external-controller-access = 123456@127.0.0.1:6170
+http-api = 123456@0.0.0.0:6171
 use-default-policy-if-wifi-not-primary = false
 # > 跳过代理
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, localhost, *.local, *.crashlytics.com, seed-sequoia.siri.apple.com, sequoia.apple.com
