--- a/ACL4SSR.ini
+++ b/ACL4SSR.ini
@@ -56,7 +56,7 @@ custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]⚡️ 节点选择`.*
 custom_proxy_group=🏆 Final兜底`select`[]⚡️ 节点选择`[]DIRECT`[]🇭🇰 香港自动`.*
 ;自动测速
 custom_proxy_group=🇭🇰 香港自动`url-test`(香港|HK|Hong Kong|Hongkong)`https://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇸🇬 狮城自动`(新加坡|坡|狮城|SG|Singapore)
+custom_proxy_group=🇸🇬 狮城自动`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`500,,50
 custom_proxy_group=🇯🇵 日本自动`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`500,,50
 custom_proxy_group=🇺🇲 美国自动`url-test`(美|US|United States)`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=🇨🇳 台湾自动`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`500,,50
